// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppBack worked with full props 1`] = `
<DocumentFragment>
  <div
    class="flex bg-mg pt-7 px-4 items-center"
    style="color: red;"
  >
    <img
      alt=""
      class=" w-4 h-4 mr-5"
      data-testid="back-icon"
      src="test-file-stub"
    />
    <p
      class="single_line text-base font-bold flex-1 text-fg text-center -indent-5 "
    >
      test
    </p>
    <a
      href="/discover"
    >
      <div
        class=" rounded-[50%] w-4 h-4 flex items-center justify-center cursor-pointer ml-2"
        style="border: 2px solid white;"
      >
        <div
          class=" rounded-[50%] w-2 h-2"
          style="border: 4px solid white;"
        />
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`AppBack worked with none black style 1`] = `
<DocumentFragment>
  <div
    class="flex bg-mg pt-7 px-4 items-center"
  >
    <img
      alt=""
      class=" w-4 h-4 mr-5"
      data-testid="back-icon"
      src="test-file-stub"
    />
    <p
      class="single_line text-base font-bold flex-1 text-fg text-center -indent-5 "
    >
      test
    </p>
    <a
      href="/discover"
    >
      <div
        class=" rounded-[50%] w-4 h-4 flex items-center justify-center cursor-pointer ml-2"
        style="border: 2px solid white;"
      >
        <div
          class=" rounded-[50%] w-2 h-2"
          style="border: 4px solid white;"
        />
      </div>
    </a>
  </div>
</DocumentFragment>
`;
